# conversational-agents-project

./: .env.example  .gitignore  01_Memory.ipynb  README.md  docker-compose.yml  main.py  memory_manager.py  memory_sentinel.py  mongo-init.js  ollamaLLM.py  pyproject.toml  start-memory-db.sh
binge-buddy/: .env.example  README.md  main.py  pyproject.toml
binge-buddy/src/binge_buddy/: actions.py  aggregator_reviewer.py  conversational_agent.py  enums.py  extractor_reviewer.py  front_end.py  main.py  memory_aggregator.py  memory_db.py  memory_extractor.py  memory_handler.py  memory_reviewer.py  memory_sentinel.py  message.py  message_log.py  ollama.py  perception_agent.py  semantic_agent.py  state_handler.py  utils.py
binge-buddy/src/binge_buddy/templates/: front_end.html
design/: README.md  binge-buddy-class-diagram.puml  episodic-state-transition-diagram.puml  memory-class-diagram.puml  semantic-state-transition-diagram.puml
src/binge_buddy/: aggregator_reviewer.py  conversational_agent.py  conversational_agent_manager.py  front_end.py  memory.py  memory_db.py  memory_handler.py  message.py  message_log.py  ollama.py  state_graph.py  state_handler.py
src/binge_buddy/agent_state/: agent_state.py  episodic_agent_state.py  semantic_agent_state.py  states.py
src/binge_buddy/agents/: aggregator_reviewer.py  base_agent.py  extractor_reviewer.py  memory_aggregator.py  memory_attributor.py  memory_extractor.py  memory_sentinel.py
src/binge_buddy/memory/: EpisodicMemory  memory.py  semantic_memory.py
src/binge_buddy/memory_workflow/: episodic_workflow.py  (+2 more)
(+6 files in other folders)
